memory-feast-online/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-feast
  labels:
    app: memory-feast
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: memory-feast
